[Add] kata 7 done